Closed Bug 230594 Opened 21 years ago Closed 21 years ago

Continuous scrolling does not work on Vertical scrollbar with Smooth Scrolling enabled

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.8

People

(Reporter: sugar.waffle, Assigned: mikepinkerton)

References

Details

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.7a) Gecko/20040110 Camino/0.7+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.7a) Gecko/20040110 Camino/0.7+

When continuing pushing a mouse button on vertical scroll bar, scrolling is not
continued to the position of a mouse pointer.

This is working in Mozilla Firebird or Safari.

-- Mac OSX 10.3.2
-- Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.7a)
Gecko/20040111 Firebird/0.8.0+
-- Safari 1.1 (v100.1)

Reproducible: Always

Steps to Reproduce:
1.
2.
3.

Actual Results:  
Only scrolling for 1 page is carried out.

Expected Results:  
Scrolling is continued to the position of a mouse pointer.
Is this 10.3 specific (works fine for me on 10.2).
WFM 10.3.2, Build 2004011103
WFM 20040109 NB. 10.3.2.
It checked again by nightly build 2004011103 & new profile.
It did not work, even if it continued pushing(mouse button does not release).
I WFM'd a bug like this a while back. it appears for some people, i guess, and
not others. reporter, anything weird about your system? US system? any language
kits installed? 
OS performed clean installation.
The language kit has chosen only English and Japanese.

The language environment is Japanese when logging in.
The weird phenomenon is not happened in the portion of especially others.
When this problem occurred, the following logs were outputted to the console log
file.

2004-01-15 08:08:35.558 Camino[1300] *** -[ChildView 
_destinationFloatValueForScroller:]: selector not recognized
2004-01-15 08:08:35.560 Camino[1300] *** -[ChildView 
_destinationFloatValueForScroller:]: selector not recognized
*** Bug 232528 has been marked as a duplicate of this bug. ***
10.3.2 (set to German)
Scrollbar set to scroll one page, scroll arrows together
Works correctly in Mozilla Classic, Modern, and Firebird

I get the same message in Console:

2004-01-29 15:56:55.973 Camino[1286] *** -[ChildView
_destinationFloatValueForScroller:]: selector not recognized
ah-ha, you have smooth scrolling turned on. see, you have to tell me these
things ;) i can repro this only with that turned on.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Summary: Continuous scrolling does not work on Vertical scrollbar. → Continuous scrolling does not work on Vertical scrollbar with Smooth Scrolling enabled
Target Milestone: --- → Camino0.8
hacked in a fix. i guess apple was assuming that any parent of a NSScroller was
a NSScrollView and having it send private, undocumented methods to implement
smooth scrolling. Gooooo Apple!
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
A setup of smoothscroll was checked.
This function was effective unawares;-P
Surely this problem was not reproduced when smoothscroll was turned OFF.

This problem's fixed by correction of Mike-san and I check later.
It has checked that this bug had fixed.
2004013006 (v0.7+)
You need to log in before you can comment on or make changes to this bug.