hacked up a private method to respond when smooth scrolling is turned on on panther (bug 230594)